FIX: fix responsive styles

--- a/src/scss/components/_todoWrapper.scss
+++ b/src/scss/components/_todoWrapper.scss
@@ -2,6 +2,6 @@
     @media (max-width: 520px) {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        width: 100%;
     }
 }
