--- a/src/scss/components/_todoForm.scss
+++ b/src/scss/components/_todoForm.scss
@@ -34,16 +34,14 @@
     }
 
     @media (max-width: 520px) {
-        width: min-content;
+        justify-content: center;
+        width: 100%;
+        
 
         &__title {
             margin-bottom: 20px;
             font-size: 32px;
             text-align: center;
-        }
-
-        &__input {
-            width: auto;
         }
     }
 
